set  user delete rooting
